<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HeyFix-Worker</string>

    <!--    Home Fragment-->
    <string name="strHistoryServices">Historial de servicios</string>
    <string name="strHistoryServicesEmpty">No hay historial de servicios</string>
    <string name="strAverageRates">Promedio de tus calificaciones</string>
    <string name="strAverageDetails">Has alcanzo un total de todos los servicios realizados de:</string>
    <string name="strNoCompleteProfile">Perfil sin completar</string>
    <string name="strNoCompleteProfileContent">Se necesita que completes tu perfil o no rebicirás solicitudes de trabajo</string>


    <!--    ChangePassword Activity-->
    <string name="strTitleChangePass">Cambiar</string>
    <string name="strSubTitleChangePass">Contraseña</string>
    <string name="strPassRequest">Ingresa una nueva contraseña correcta y su confirmación en tu cuenta para iniciar sesión a nuestra aplicación con una nueva sesión</string>
    <string name="strChangePass">Cambiar Contraseña</string>
    <string name="strCurrentlyPassword">Contraseña actual</string>
    <string name="strNewPassword">Nueva contraseña</string>
    <string name="strRepeatNewPassword">Repetir nueva contraseña</string>

    <!--    Profile Activity-->
    <string name="strTitleProfile">Información personal</string>
    <string name="strEditProfile">Toca un campo para editar</string>
    <string name="strSaveChanges">Guardar cambios</string>
    <string name="strGoToChangePass">Cambiar contraseña</string>
    <string name="strGoToAbout">Sobre nosotros</string>

    <!--    About Activity-->
    <string name="strAbourBar">Sobre nosotros</string>
    <string name="strTitleAbout">HeyFix</string>
    <string name="strSubTitleAbout">v1.0</string>
    <string name="strGooglePlay">Califícanos en Google Play</string>
    <string name="strSocialNetworks">Síguenos en Redes Sociales</string>
    <string name="strTerms">TÉRMINOS DE USO</string>
    <string name="strPrivacy">POLÍTICA DE PRIVACIDAD</string>
    <string name="strSoftware">SOFTWARE DE CÓDIGO ABIERTO</string>
    <string name="strBrand">© 2022 ThePandaDevs</string>

    <!--    Chat activity-->
    <string name="strTypeMessage">Escribe un mensaje</string>

    <!--  Login Activity  -->
    <string name="strLog">Inicio de</string>
    <string name="strIn">sesión</string>
    <string name="strLogInWithGoogle">Iniciar con Google</string>
    <string name="strWelcome">Inicia sesión para poder encontrar con personas que necesitan de tu servicio.</string>
    <string name="strPassword">Contraseña</string>
    <string name="strEmail">Correo electrónico</string>
    <string name="strRegister">Registrarse</string>
    <string name="strLogin">Iniciar sesión</string>
    <string name="strO">o</string>

    <!--    Register Activity-->
    <string name="strCreateNew">Crear nueva</string>
    <string name="strAccount">cuenta</string>
    <string name="strDescription">Por favor, llena los siguientes campos:</string>
    <string name="strRegisterWithGoogle">Registrate con Google</string>
    <string name="strName">Nombre</string>
    <string name="strFistSurname">Primer Apellido</string>
    <string name="strSecondSurname">Segundo Apellido</string>
    <string name="strWork">Tipo de trabajo</string>
    <string name="strCar">Transporte que usas</string>
    <string name="strNameNotValid">El campo tiene caracteres no válidos</string>
    <string name="strNotValid">El campo no debe estar vacío</string>
    <string-array name="strArrayExample">
        <item>Plomería</item>
        <item>Carpintería</item>
    </string-array>

    <!--  Request service Activity  -->
    <string name="strServiceInProgress">Servicio en proceso</string>
    <string name="strGoToChat">Chat</string>
    <string name="strGoToCall">Llamar</string>
    <string name="strCancelService">Cancelar servicio</string>
    <string name="strArrived">Llegué</string>
    <string name="strOpenMaps">Abrir Maps</string>
    <string name="strFinishService">Finalizar servicio</string>

    <!--   Profile Fragment-->
    <string name="strPhone">Teléfono</string>

    <!--   Service Fragment-->
    <string name="strServiceDetails">solicitan de tu servicio!</string>
    <string name="strNoWork">Sin solicitudes de trabajo aún</string>
    <string name="strOnWork">Estás en un servicio en proceso</string>
    <string name="strGoToWork">Ir al servicio</string>
    <string name="strAccept">Aceptar</string>
    <string name="strReject">Rechazar</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>